syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
  User user = 4;
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string role = 4;
}

message SignupResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string message = 1;
}

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string role = 4;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
  string timestamp = 3;
}

